--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@acrolinx/app-sdk": "latest",
-    "@types/jest": "24.0.13",
-    "@types/react": "16.8.17",
-    "@types/react-dom": "16.8.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "typescript": "3.4.5"
+    "@acrolinx/app-sdk": "^0.0.11",
+    "@types/jest": "24.0.17",
+    "@types/react": "16.9.2",
+    "@types/react-dom": "16.8.5",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-scripts": "3.1.1",
+    "typescript": "3.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
